feat: get linked emails
